--- a/complot-estilos.css
+++ b/complot-estilos.css
@@ -20,8 +20,8 @@ body{
 
 header {
     width: 100%;
-    background-color: #FFFFFF;
-}
+    background-color: #FFFFFF;padding-bottom: 20px;}
+
 
 h3, h4, h5 {
 	height:16px;
@@ -45,9 +45,10 @@ h5 {
 	background: #FFFFFF;
 	display: flex;
 	font-size: 12px;
+	width: 100%;
 	padding-top:10px;
-	padding-bottom: 10px;
-	padding-right: 20px;
+	padding-bottom: 0px;
+	padding-right: 40px;
 	color:#737373;
 	justify-content: flex-end;
 }
@@ -80,14 +81,24 @@ h5 {
 }
 	
 .botonera-head {
+	display: flex;
+	width: 100%;
+	height: 100%;
 	font-size: 14px;
 	color:#737373;
+	padding-top: 10px;
+	padding-left: 10px;
+	margin-top: 10px;	
+	box-sizing: border-box;
+}
+
+.navegacion {
 	display: flex;
-	justify-content: space-between;
-	padding-top: 30px;
-	margin-top: 15px;
-	padding-left: 30%;
-	
+	width: 100%;
+	box-sizing: border-box;
+	justify-content: space-around;
+	padding-right: 5%;
+	padding-left: 10%;
 }
 .suscripcion {
 	width: 100%;
@@ -104,9 +115,8 @@ h5 {
 
 #buscar {
 	display: flex;
-	justify-content:flex-end;
-	margin-left: 10px;
-	margin-top: -4px;
+	display: block;
+	box-sizing: border-box;
 }
 
 footer {
@@ -116,7 +126,7 @@ footer {
 	flex-direction: column;
 	align-self: center;
 	margin-top: 20px;
-	margin-bottom: 40px;
+	margin-bottom: 0px;
 }
 	.newsletter {
 	display: flex;
