--- a/complot-estilos.css
+++ b/complot-estilos.css
@@ -16,6 +16,7 @@ body{
 	width: 100%;
 	display: flex;
 	flex-direction: column;
+	padding-bottom: 40px;
 }
 
 header {
@@ -118,6 +119,50 @@ h5 {
 	display: block;
 	box-sizing: border-box;
 }
+.gallery {
+	display:flex;
+	width: 100%;
+	padding: 0%;
+	margin: 0%;
+}
+
+div a img {
+	width: 100%;
+	height: auto;
+	padding-top: 0px;
+}
+.botonera-img {
+	width: 100%;
+	display: block;
+	padding-bottom: 40px;
+	padding-top: 20px;
+}
+.botonera-imagenes-01, .botonera-imagenes-02 {
+	width: 100%;
+	display: flex;
+	box-sizing: border-box;
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
+.hashtag {
+	display: flex;
+	font-size: 35px;
+    font-weight: 700;
+	margin-top: 40px;
+    margin-bottom: 30px;
+    text-align: center;
+	justify-content: center;
+	
+}
+.botonera-redes {
+	width: 100%;
+	display: flex;
+	align-self: center;
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-top:10px;
+}
 
 footer {
 	width: 100%;
@@ -156,5 +201,6 @@ footer {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	
+}
+.botonera-02 {
 }
