--- a/complot-estilos.css
+++ b/complot-estilos.css
@@ -143,6 +143,8 @@ div a img {
 	box-sizing: border-box;
 	padding-left: 5%;
 	padding-right: 5%;
+	padding-top: 10px;
+	gap: 1%;
 }
 
 .hashtag {
@@ -158,12 +160,17 @@ div a img {
 .botonera-redes {
 	width: 100%;
 	display: flex;
-	align-self: center;
+	justify-content: space-around;
 	padding-left: 5%;
 	padding-right: 5%;
 	padding-top:10px;
+	gap: 1%;
 }
 
+.boton{ 
+	display: grid;
+	gap:40px;
+}
 footer {
 	width: 100%;
 	height: 100%;
