--- a/complot-estilos.css
+++ b/complot-estilos.css
@@ -21,18 +21,16 @@ body{
 
 header {
     width: 100%;
-    background-color: #FFFFFF;padding-bottom: 20px;}
-
-
-h3, h4, h5 {
-	height:16px;
+    background-color: #FFFFFF;
+	padding-bottom: 20px;
 }
-
+h3, h4, h5 {
+	height:14px;
+}
 h3 { 
 	color:#737373;
-	font-size: 15px;
+	font-size: 12px;
 	font-weight: 400;
-	padding-top: 30px;
 }
 
 h4 {
@@ -69,7 +67,9 @@ h5 {
 		background: #000000;
 		text-align: center;
 	}
-
+p {
+	height: 12px;
+}
 .fav { 
 	display: flex; 
 	margin-right: 60px;
@@ -108,7 +108,6 @@ h5 {
 	width: 100%;
 	justify-content: center;
 	padding-top: 20px;
-
 }
 #logo {
 	display:flex;
@@ -197,7 +196,7 @@ footer {
 }
 .suscribirse-boton {
 	margin:0px;
-	padding: 0px;
+	padding-bottom: 20px;
 	box-sizing: border-box;
 	display: flex;
 	align-content: center;
@@ -211,16 +210,21 @@ footer {
 
 .contacto {
 	display: flex;
+	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
 	padding-top: 40px;
 	padding-bottom: 25px;
+	box-sizing: border-box;
+}
+.contacto h3 {
+	width: 33%;
+	text-align: center;
 }
 .datos {
 	display: flex;
+	width: 100%;
 	justify-content: space-between;
-	padding-left: 13%;
-	padding-right: 10%;
 }
 .atencion {
 	display: flex;
@@ -228,13 +232,57 @@ footer {
 	padding-top: 25px;
 }
 .ayuda {
-	display: flex;
-	justify-content:center;
+	text-align: center;
 	padding-top: 40px;
-	padding-bottom: 25px;
+	
 }
-.listado {
-	display: block;
+.lista {
+	text-align: center;
+	padding-top: 40px;
 }
-.botonera-02 {
+
+li { 
+	padding: 2px;
+	font-size: 12px;
 }
+
+.listas-footer {
+		display: flex;
+	}
+	.lista {
+		display: flex;
+		flex-direction: column;
+		width: 33%;
+		list-style: none;
+}
+.titulos-listas {
+	font-size: 12px;
+	padding-bottom: 30px;
+	font-weight: bold;
+}
+
+@media screen and (max-width:768px) {
+	#barra {
+		display: none;
+	}
+	.botonera-head {
+		display: none;
+	}
+	.gallery {
+		display: none;
+	}
+	
+	header {
+		padding-bottom:0px;
+	}
+	.listas-footer {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		
+	}
+	.lista {
+		display: flex;
+		flex-direction: column;
+		padding-top: 30px;
+	} 
