--- a/complot-estilos.css
+++ b/complot-estilos.css
@@ -21,12 +21,15 @@ body{
 
 header {
     width: 100%;
+	position: fixed;
     background-color: #FFFFFF;
 	padding-bottom: 20px;
 }
+
 h3, h4, h5 {
 	height:14px;
 }
+
 h3 { 
 	color:#737373;
 	font-size: 12px;
@@ -67,9 +70,11 @@ h5 {
 		background: #000000;
 		text-align: center;
 	}
+
 p {
 	height: 12px;
 }
+
 .fav { 
 	display: flex; 
 	margin-right: 60px;
@@ -82,7 +87,10 @@ p {
 	box-sizing: content-box;
 	margin-left: -40px;
 }
-	
+#cuotas{
+	width: 100%;
+	padding-bottom: 10px;
+}
 .botonera-head {
 	display: flex;
 	width: 100%;
@@ -121,6 +129,29 @@ p {
 	display: block;
 	box-sizing: border-box;
 }
+#menu-small {
+	width: 100%;
+	display: none;
+	padding-left: 05px;
+	padding-right: 05px;
+}
+
+#lupa-shop {
+	display:flex;
+	flex-direction: row-reverse;
+	padding-right: 5px;
+}
+
+#desplegable {
+	padding-left: 05px;
+	padding-right: 60px;
+}
+
+.navegacion{
+margin-left: 40px;
+margin-right: 40px;
+}
+
 .gallery {
 	display:flex;
 	width: 100%;
@@ -171,13 +202,15 @@ div a img {
 
 .boton{ 
 	display: grid;
-	gap:40px;
+	gap:40px
 }
+
 footer {
 	width: 100%;
 	height: 100%;
 	margin-top: 20px;
 	margin-bottom: 0px;
+	padding-left: 20px;
 }
 	.newsletter {
 	display: flex;
@@ -187,6 +220,7 @@ footer {
 	margin-bottom: 20px;
 	align-items: center;
 }
+
 .mail {
 	text-decoration: underline;
 	text-align: center;
@@ -194,6 +228,7 @@ footer {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
+
 .suscribirse-boton {
 	margin:0px;
 	padding-bottom: 20px;
@@ -203,6 +238,7 @@ footer {
 	align-self:center;
 	align-items: center;
 }
+
 .suscribirse-boton {
 	display: flex;
 	justify-content: center;
@@ -221,21 +257,24 @@ footer {
 	width: 33%;
 	text-align: center;
 }
+
 .datos {
 	display: flex;
 	width: 100%;
 	justify-content: space-between;
 }
+
 .atencion {
 	display: flex;
 	justify-content: center;
 	padding-top: 25px;
 }
+
 .ayuda {
 	text-align: center;
 	padding-top: 40px;
-	
 }
+
 .lista {
 	text-align: center;
 	padding-top: 40px;
@@ -247,8 +286,9 @@ li {
 }
 
 .listas-footer {
-		display: flex;
-	}
+	display: flex;
+}
+
 	.lista {
 		display: flex;
 		flex-direction: column;
@@ -268,10 +308,28 @@ li {
 	.botonera-head {
 		display: none;
 	}
-	.gallery {
+	#logo{
+	display: none;
+	}
+	.gallery{
 		display: none;
 	}
-	
+	#cuotas{
+		padding-bottom: 30px;
+	}
+#menu-small {
+	display: flex;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 05px;
+	padding-right: 05px;
+		}
+	.logo-small {
+		width: 100%;
+		display: flex;
+		align-self: center;
+		justify-content: center;
+	}
 	header {
 		padding-bottom:0px;
 	}
@@ -284,5 +342,4 @@ li {
 	.lista {
 		display: flex;
 		flex-direction: column;
-		padding-top: 30px;
-	} 
+		padding-top: 30px}
