--- a/complot-estilos.css
+++ b/complot-estilos.css
@@ -139,12 +139,12 @@ p {
 #lupa-shop {
 	display:flex;
 	flex-direction: row-reverse;
-	padding-right: 5px;
+	padding-right: 3%;
 }
 
 #desplegable {
-	padding-left: 05px;
-	padding-right: 60px;
+	padding-left: 3%;
+	padding-right: 40px;
 }
 
 .navegacion{
@@ -319,8 +319,8 @@ li {
 	}
 #menu-small {
 	display: flex;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	padding-left: 05px;
 	padding-right: 05px;
 		}
