--- a/complot-estilos.css
+++ b/complot-estilos.css
@@ -164,30 +164,21 @@ div a img {
 	height: auto;
 	padding-top: 0px;
 }
-.botonera-img {
+
+.grid-container {
 	width: 100%;
-	display: block;
-	padding-bottom: 40px;
-	padding-top: 20px;
-}
-.botonera-imagenes-01 {
-	width: 100%;
-	display: flex;
-	box-sizing: border-box;
+	height: 100%;
 	padding-left: 5%;
 	padding-right: 5%;
-	padding-top: 100px;
-	gap: 1%;
+	padding-top: 140px;
+	display: grid;
+	grid-template-columns: 33% 33% 33%;
+	grid-gap: 1%;
 }
 
-.botonera-imagenes-02 {
+.grid-container img {
 	width: 100%;
-	display: flex;
-	box-sizing: border-box;
-	padding-left: 5%;
-	padding-right: 5%;
-	padding-top: 10px;
-	gap: 1%;
+	display: block;
 }
 
 .hashtag {
@@ -201,18 +192,21 @@ div a img {
 	
 }
 .botonera-redes {
-	width: 100%;
-	display: flex;
-	justify-content: space-around;
+	display: grid;
+	box-sizing: border-box;
+	max-width: 100%;
+	height: auto;
+	grid-template-columns: 25% 25% 25% 25%;
 	padding-left: 5%;
 	padding-right: 5%;
-	padding-top:10px;
-	gap: 1%;
+	padding-top: 10px;
+	grid-gap: 1%;
 }
 
-.boton{ 
-	display: grid;
-	gap:40px
+.botonera-redes img {
+	width: 100%;
+	height: auto;
+	align-content: space-around;
 }
 
 footer {
@@ -349,11 +343,18 @@ li {
 		align-items: center;
 	}
 	
-	.botonera-imagenes-01{
-		padding-top: 110px;
+	.grid-container {
+	width: 100%;
+	height: 100%;
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-top: 140px;
+	gap: 1%;
+	grid-template-columns: 50% 50%;
 	}
-	}
+	
 	.lista {
 		display: flex;
 		flex-direction: column;
-		padding-top: 30px}
+		padding-top: 30px
+	}
