--- a/complot-estilos.css
+++ b/complot-estilos.css
@@ -193,14 +193,14 @@ div a img {
 }
 .botonera-redes {
 	display: grid;
-	box-sizing: border-box;
-	max-width: 100%;
-	height: auto;
-	grid-template-columns: 25% 25% 25% 25%;
+	justify-content: space-around;
+	width: 100%;
+	height: 100%;
+	grid-template-columns: 24% 24% 24% 24%;
 	padding-left: 5%;
 	padding-right: 5%;
 	padding-top: 10px;
-	grid-gap: 1%;
+	grid-gap: 1%x;
 }
 
 .botonera-redes img {
