--- a/complot-estilos.css
+++ b/complot-estilos.css
@@ -16,34 +16,52 @@ body{
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	padding-bottom: 80px;
+	padding: 0 0 100px 0;
+}
+
+p {
+	font-size: 12px;
+	font-family: lato;
 }
 
 header {
     width: 100%;
-	position: fixed;
     background-color: #FFFFFF;
 	padding-bottom: 20px;
+	position: fixed;
 	opacity: 0.9;
+	z-index: 1;
 }
 
-h3, h4, h5 {
-	height:14px;
+h1 {
+	color:#000000;
+	font-size: 16px;
+}
+
+h2 { 
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 600;
 }
 
 h3 { 
-	color:#737373;
-	font-size: 12px;
+	font-size: 14px;
+	font-style: normal;
 	font-weight: 400;
-}
-
-h4 {
-	color:#737373;
 }
 
 h5 {	
 	height:17px;
 	color:#FFFFFF;
+}
+
+li {
+	list-style: none;
+}
+
+li:hover {
+	text-decoration: underline;
+	cursor: pointer;
 }
 
 #barra {
@@ -71,6 +89,12 @@ h5 {
 
 p {
 	height: 12px;
+	color: #737373
+}
+
+a {
+	text-decoration: none;
+	color: #737373;
 }
 
 .fav { 
@@ -79,22 +103,56 @@ p {
 	box-sizing: content-box;
 }
 
-a:hover {
+.fav:hover{
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+h2:hover {
 	text-decoration: underline;
 	 cursor: pointer;
+}
+h3:hover {
+	cursor: pointer;
+}
+
+.navegacion a:hover {
+	cursor: pointer;
+	transition-duration: 0.2s;
+	transform: scale(1.20)
 }
 
 .ingreso {
 	display: flex;
 	box-sizing: content-box;
 	column-gap: 10px;
+	animation: none;
 }
 
+.ingreso:hover{
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+.complotrock{
+	color: #000000;
+	text-decoration: none;
+}
+
+.complotrock:hover{
+	text-decoration: none;
+}
 
 #cuotas{
 	width: 100%;
 	padding-bottom: 10px;
 }
+
+.texto-cuotas {
+		color: #FFFFFF;
+		margin: 0px 0px 5px 0px;
+	}
+
 .botonera-head {
 	display: flex;
 	width: 100%;
@@ -110,20 +168,46 @@ a:hover {
 	width: 100%;
 	box-sizing: border-box;
 	justify-content: space-around;
+	align-self: center;
 	padding: 0 5% 0 10%;
+}
+
+nav a {
+	border-bottom: none;
+	
+}
+#buscar {
+	font-size: 10px;
+	background: #FFFFFF;
+	border-bottom: 1px solid black;
+}
+	
+	.buscador {
+	display: flex;
+	margin: 0px 20px 0px 0px;
+}
+
+.gallery {
+	margin: 200px 0px 0px 0px;
 }
 
 .suscripcion {
 	display: flex;
-	width: 100%;
+	width: 30%;
 	justify-content: center;
-	padding: 20px 0 0 0;
+	text-align: center;
+	padding: 0 0 0 0;
+	
 }
 
-#logo {
+#logo-contenedor {
 	display:flex;
 	justify-content: center;
 	padding: 20px 0 20px 0;
+}
+
+.logo:hover {
+	cursor: pointer;
 }
 
 #buscar {
@@ -146,21 +230,15 @@ a:hover {
 	cursor: pointer;
 }
 
+
 #desplegable {
 	margin: 0 40px 0 3%;
 	display: inline-block;
 	cursor: pointer;
 }
 
-
-.lista-desplegable {
-	
-	
-}
-
-.navegacion{
-	margin-left: 40px;
-	margin-right: 40px;
+.navegacion {
+	margin: 0px 40px 0px 40px;
 	}
 
 div a img {
@@ -168,10 +246,6 @@ div a img {
 	height: auto;
 	padding: 0px;
 	cursor: pointer;
-}
-
-.espacio-header {
-	padding: 190px 0px 0px 0px;
 }
 
 .grid-container {
@@ -193,12 +267,16 @@ div a img {
 	cursor: pointer;
 }
 
+.grid-container img:hover{
+ 	transition-duration: 0.2s;
+	transform: scale(1.05)
+}
+
 .hashtag {
 	display: flex;
 	font-size: 35px;
     font-weight: 700;
-	margin-top: 40px;
-    margin-bottom: 30px;
+	margin: 40px 0px 40px 0px;
     text-align: center;
 	justify-content: center;
 }
@@ -220,45 +298,66 @@ div a img {
 	cursor: pointer;
 }
 
+.botonera-redes img:hover{
+ 	transition-duration: 0.2s;
+	transform: scale(1.05)
+}
+
 footer {
 	width: 100%;
 	height: 100%;
 	padding: 20px 5% 0 5%;
 }
 
+.video {
+	padding: 30px 0px 0px 0px;
+	display: flex;
+	justify-content: center;
+}
+
 	.newsletter {
 	display: flex;
 	flex-direction: column;
 	color:#000000;
-	margin-top: 25px;
-	margin-bottom: 40px;
+	margin-top: 60px;
+	margin-bottom: 60px;
 	align-items: center;
 }
 
 .mail {
-	text-decoration: underline;
 	text-align: center;
 	font-size: 12px;
-	margin-top: 40px;
-	margin-bottom: 20px;
+	margin: 0px 0px 0px 0px;
 }
 
-.suscribirse-boton {
-	padding: 0 0 20px 0;
+.boton-suscripcion {
+	padding: 10px;
+	margin: 20px 0px 0px 0px;
+	width: auto;
 	box-sizing: border-box;
 	display: flex;
 	align-content: center;
 	align-self:center;
-	align-items: center;
-	cursor: pointer;
+	background-color: #000000;
+	color: #FFFFFF;
+	font-size: 12px;
 }
 
+.boton-suscripcion:hover{
+	transition-duration: 0.2s;
+	transform: scale(1.12)
+}
+
+.boton-arrepentimiento:hover{
+	 transition-duration: 0.2s;
+	transform: scale(1.05)
+}
 .contacto {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	padding: 40px 0 25px 0;
+	padding: 40px 0 40px 0;
  	border-top: 1px solid #797979;
   	border-bottom: 1px solid #797979;;
 }
@@ -271,7 +370,8 @@ footer {
 .datos {
 	display: flex;
 	width: 100%;
-	justify-content: space-between;
+	justify-content: space-around;
+	text-align: center;
 }
 
 .atencion {
@@ -288,12 +388,14 @@ footer {
 .lista {
 	text-align: center;
 	padding: 40px 0 0 0;
+	align-items: center;
 }
 
 li { 
 	padding: 2px;
 	font-size: 12px;
 	color: #797979;
+	
 }
 
 .listas-footer {
@@ -313,6 +415,132 @@ li {
 	font-weight: bold;
 }
 
+.boton-arrepentimiento:hover {
+	 cursor: pointer;
+	}
+
+.boton-suscripcion:hover {
+	 cursor: pointer;
+	}
+
+form {
+	padding: 10px 0px 0px 0px;
+	width: 70%;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+}
+
+input {
+	background-color: #CBCBCB;
+	padding: 10px;
+	font-size: 14px;
+}
+
+label {
+	padding: 15px 0px 10px 0px;
+	font-size: 14px;
+}
+
+.formulario {
+	padding: 200px 5% 0 5%;
+	animation-name: formulario;
+	animation-duration: 4s;
+	animation-direction: alternate;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-delay: 3ms;
+	animation-play-state: running;
+	animation-fill-mode: forwards;
+}
+
+@keyframes formulario {
+	0% {
+		opacity: 0;
+}
+	50% {
+		opacity: 1;
+}
+}
+.titulo-formulario {
+	padding: 20px 0px 0px 0px;
+	height: 100%;
+	}
+
+.texto-formulario {
+	height: 100%;
+	padding: 10px 0px 10px 0px;
+	border-bottom: 1px solid #797979;
+}
+
+.cambio {
+	display: row;
+	padding: 20px 0px 40px 0px;
+	height: 100%;
+	}
+
+.motivo-cambio {
+	padding: 0px 0px 20px 0px;
+}
+
+.opciones-cambio {
+	display: grid;
+	grid-template-columns: 23% 27% 25% 25%;
+	width: 100%;	
+}
+
+.boton-form {
+	height: 40px;
+	width: 80px;
+	background-color: #000000;
+	color: #FFFFFF;
+}
+
+.boton-form:hover{
+	cursor: pointer;
+	transition-duration: 0.2s;
+	transform: scale(1.05)
+}
+
+.fix {
+	display: grid;
+	height: 100%;
+	text-align: center;
+	padding: 15% 0 10% 0;
+	animation-name: texto;
+	animation-duration: 4s;
+	animation-direction: normal;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in-out;
+	animation-delay: 3ms;
+	animation-play-state: running;
+	animation-fill-mode: forwards;
+}
+
+@keyframes texto {
+	0% {
+		opacity: 0
+
+}
+	50% {
+		opacity: 1;
+
+}
+}
+.coming-soon {
+	width: 100%;
+	text-align:center;
+	font-size: 66px;
+	padding: 150px 0 10px 0;
+	letter-spacing: 6px;
+}
+
+.working {
+	font-size: 22px;
+	color: #737373;
+	letter-spacing: 4px;
+}
+
 @media screen and (max-width:768px) {
 	
 	#barra {
@@ -324,7 +552,7 @@ li {
 	}
 	
 	
-	#logo {
+	#logo-contenedor {
 		display: none;
 	}
 	
@@ -333,15 +561,19 @@ li {
 	}
 	
 	#cuotas {
-		padding: 0 0 30px 0;
+		padding: 20px 0 30px 0;
+		box-sizing: border-box;
+		text-align: center;
 	}
 	
-	.espacio-header {
-		display: none;
-	}
 	
 	header {
 		opacity: 10;
+  		position: fixed;
+		box-sizing: border-box;
+  		width: 100%;
+		padding-bottom: 10px;
+		background-color: #FFFFFF;
 	}
 	
 	#menu-small {
@@ -356,17 +588,12 @@ li {
 		justify-content: center;
 	}
 	
-	header {
-		padding:0px;
-	}
-	
 	#cuotas {
 	width: 100%;
 	box-sizing: content-box;
-	align-self: center;
-	justify-content: center;
-	padding: 10px 0px 30px 0px;
+	padding: 10px 0px 40px 0px;
 	}
+		
 	.listas-footer {
 		display: flex;
 		flex-direction: column;
@@ -389,5 +616,35 @@ li {
 		justify-content: space-between;
 		gap-area: 5px;
 	}
+	
+	.formulario {
+	padding: 140px 5% 0 5%;
+	position: relative;
+	z-index: 0;
 }
 	
+	.opciones-cambio {
+	display: grid;
+	grid-template-columns: 100%;
+	width: 100%;
+}
+	.fix {	
+		height: 100%;
+		width:100%;
+		text-align: center;
+		justify-content: space-around;
+		padding: 40% 0 20% 0;
+}
+	
+	.coming-soon {
+		font-size: 50px;
+		padding: 15% 0 20px 0;
+		letter-spacing: 3px;
+	}
+	
+	.working {
+		font-size: 20px;
+	}
+	
+	
+}
